# WTM_project

./: BE_run.sh  README.md
backend/: pyproject.toml
backend/db/: alembic.ini
backend/db/migrations/: env.py
backend/db/migrations/versions/: 6b83126b7be6_add_menu_and_food_tables_with_.py  d5850ecc7d7a_add_ingredients_and_embedding_columns_.py
backend/src/app/: main.py
backend/src/app/api/: foods.py  menus.py
backend/src/app/core/: food_info.py  ocr.py
backend/src/app/crud/: crud_food.py  crud_menu.py
backend/src/app/db/: database.py
backend/src/app/db/models/: __init__.py  food.py  menu.py
backend/src/app/schemas/: food.py  menu.py
